key Points code

--- a/SIFT-SURF/SIFT.ipynb
+++ b/SIFT-SURF/SIFT.ipynb
@@ -16,201 +16,15 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import sklearn.metrics as metrics"
+    "import sklearn.metrics as metrics\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Horses/h1.jpg\n",
-      "Bikes/0003.jpg\n",
-      "Horses/horse27.jpg\n",
-      "Bikes/0031.jpg\n",
-      "Horses/horse23.jpg\n",
-      "Bikes/0005.jpg\n",
-      "Bikes/0009.jpg\n",
-      "Bikes/0048.jpg\n",
-      "Horses/horse43.jpg\n",
-      "Bikes/0020.jpg\n",
-      "Horses/horse8 .jpg\n",
-      "Bikes/0027.jpg\n",
-      "Bikes/0068.jpg\n",
-      "Bikes/0045.jpg\n",
-      "Bikes/0029.jpg\n",
-      "Bikes/0065.jpg\n",
-      "Bikes/0034.jpg\n",
-      "Bikes/0042.jpg\n",
-      "Bikes/0056.jpg\n",
-      "Horses/horse80.jpg\n",
-      "Horses/horse6 .jpg\n",
-      "Horses/horse7 .jpg\n",
-      "Horses/horse45.jpg\n",
-      "Horses/horse3 .jpg\n",
-      "Horses/horse1  (6).jpg\n",
-      "Bikes/0054.jpg\n",
-      "Bikes/0052.jpg\n",
-      "Bikes/0038.jpg\n",
-      "Horses/horse1  (8).jpg\n",
-      "Horses/horse28.jpg\n",
-      "Bikes/0060.jpg\n",
-      "Horses/horse41.jpg\n",
-      "Horses/horse33.jpg\n",
-      "Horses/horse37.jpg\n",
-      "Horses/horse12.jpg\n",
-      "Bikes/0080.jpg\n",
-      "Horses/horse29.jpg\n",
-      "Horses/horse63.jpg\n",
-      "Bikes/0032.jpg\n",
-      "Bikes/0037.jpg\n",
-      "Bikes/0022.jpg\n",
-      "Bikes/0016.jpg\n",
-      "Horses/horse1 .jpg\n",
-      "Horses/h2.jpg\n",
-      "Bikes/0010.jpg\n",
-      "Horses/horse32.jpg\n",
-      "Horses/horse81.jpg\n",
-      "Bikes/0012.jpg\n",
-      "Bikes/0064.jpg\n",
-      "Horses/horse76.jpg\n",
-      "Horses/horse73.jpg\n",
-      "Horses/horse22.jpg\n",
-      "Horses/horse18.jpg\n",
-      "Bikes/0024.jpg\n",
-      "Horses/horse71.jpg\n",
-      "Horses/horse35.jpg\n",
-      "Bikes/0013.jpg\n",
-      "Bikes/0014.jpg\n",
-      "Bikes/0074.jpg\n",
-      "Bikes/0067.jpg\n",
-      "Horses/horse39.jpg\n",
-      "Bikes/0051.jpg\n",
-      "Bikes/0006.jpg\n",
-      "Horses/horse58.jpg\n",
-      "Horses/horse5 .jpg\n",
-      "Horses/horse25.jpg\n",
-      "Horses/horse55.jpg\n",
-      "Bikes/0043.jpg\n",
-      "Bikes/0040.jpg\n",
-      "Bikes/0069.jpg\n",
-      "Bikes/0076.jpg\n",
-      "Horses/horse51.jpg\n",
-      "Horses/horse44.jpg\n",
-      "Horses/horse53.jpg\n",
-      "Bikes/0078.jpg\n",
-      "Horses/horse48.jpg\n",
-      "Horses/horse59.jpg\n",
-      "Horses/horse67.jpg\n",
-      "Bikes/0073.jpg\n",
-      "Horses/horse46.jpg\n",
-      "Horses/horse40.jpg\n",
-      "Horses/horse1  (15).jpg\n",
-      "Horses/horse66.jpg\n",
-      "Horses/horse1  (37).jpg\n",
-      "Horses/horse1  (32).jpg\n",
-      "Bikes/0066.jpg\n",
-      "Horses/horse72.jpg\n",
-      "Bikes/0063.jpg\n",
-      "Horses/horse1  (44).jpg\n",
-      "Horses/horse79.jpg\n",
-      "Bikes/0015.jpg\n",
-      "Horses/horse19.jpg\n",
-      "Bikes/0077.jpg\n",
-      "Horses/horse56.jpg\n",
-      "Bikes/0049.jpg\n",
-      "Horses/horse57.jpg\n",
-      "Horses/horse1  (43).jpg\n",
-      "Horses/horse77.jpg\n",
-      "Horses/horse64.jpg\n",
-      "Bikes/0018.jpg\n",
-      "Horses/horse13.jpg\n",
-      "Horses/horse61.jpg\n",
-      "Horses/horse36.jpg\n",
-      "Bikes/0035.jpg\n",
-      "Horses/horse1  (12).jpg\n",
-      "Horses/horse68.jpg\n",
-      "Horses/horse49.jpg\n",
-      "Bikes/0004.jpg\n",
-      "Bikes/0033.jpg\n",
-      "Bikes/0021.jpg\n",
-      "Bikes/0061.jpg\n",
-      "Horses/horse75.jpg\n",
-      "Horses/horse20.jpg\n",
-      "Horses/horse1  (5).jpg\n",
-      "Horses/horse38.jpg\n",
-      "Bikes/0025.jpg\n",
-      "Horses/horse30.jpg\n",
-      "Horses/horse1  (26).jpg\n",
-      "Bikes/0036.jpg\n",
-      "Bikes/0044.jpg\n",
-      "Horses/horse70.jpg\n",
-      "Horses/horse60.jpg\n",
-      "Horses/horse1  (33).jpg\n",
-      "Bikes/0079.jpg\n",
-      "Horses/horse54.jpg\n",
-      "Bikes/0041.jpg\n",
-      "Bikes/0046.jpg\n",
-      "Bikes/0050.jpg\n",
-      "Bikes/0053.jpg\n",
-      "Horses/horse11.jpg\n",
-      "Horses/horse1  (24).jpg\n",
-      "Bikes/0019.jpg\n",
-      "Horses/horse10.jpg\n",
-      "Horses/horse65.jpg\n",
-      "Horses/horse42.jpg\n",
-      "Bikes/0072.jpg\n",
-      "Horses/horse26.jpg\n",
-      "Horses/horse14.jpg\n",
-      "Horses/horse17.jpg\n",
-      "Bikes/0058.jpg\n",
-      "Bikes/0011.jpg\n",
-      "Horses/horse62.jpg\n",
-      "Horses/horse1  (31).jpg\n",
-      "Bikes/0039.jpg\n",
-      "Bikes/0001.jpg\n",
-      "Horses/horse21.jpg\n",
-      "Horses/horse4 .jpg\n",
-      "Horses/horse52.jpg\n",
-      "Horses/horse9 .jpg\n",
-      "Bikes/0071.jpg\n",
-      "Horses/horse1  (45).jpg\n",
-      "Bikes/0007.jpg\n",
-      "Horses/horse16.jpg\n",
-      "Bikes/0028.jpg\n",
-      "Horses/horse34.jpg\n",
-      "Horses/horse1  (7).jpg\n",
-      "Bikes/0070.jpg\n",
-      "Horses/horse31.jpg\n",
-      "Horses/horse2 .jpg\n",
-      "Horses/horse24.jpg\n",
-      "Bikes/0026.jpg\n",
-      "Horses/horse1  (17).jpg\n",
-      "Bikes/0062.jpg\n",
-      "Bikes/0017.jpg\n",
-      "Horses/horse15.jpg\n",
-      "Horses/horse74.jpg\n",
-      "Bikes/0023.jpg\n",
-      "Horses/horse69.jpg\n",
-      "Bikes/0059.jpg\n",
-      "Horses/horse50.jpg\n",
-      "Horses/horse78.jpg\n",
-      "Bikes/0030.jpg\n",
-      "Bikes/0008.jpg\n",
-      "Bikes/0002.jpg\n",
-      "Bikes/0057.jpg\n",
-      "Bikes/0047.jpg\n",
-      "Horses/horse47.jpg\n",
-      "Bikes/0055.jpg\n",
-      "Bikes/0075.jpg\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "imagePaths = list(imutils.paths.list_images(\"Bikes\")) + list(imutils.paths.list_images(\"Horses\"))\n",
     "random.shuffle(imagePaths)\n",
@@ -231,6 +45,7 @@
     "    else:\n",
     "        labels.append(1)\n",
     "        \n",
+    "        \n",
     "descriptors = descriptorList[0][1]\n",
     "    \n",
     "for imageFlag, descriptor in descriptorList[1:]:\n",
@@ -244,17 +59,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-dac33f3f4842>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m500\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mvoc\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mvariance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkmeans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescriptors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mvariance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/ml/lib/python3.5/site-packages/scipy/cluster/vq.py\u001b[0m in \u001b[0;36mkmeans\u001b[0;34m(obs, k_or_guess, iter, thresh, check_finite)\u001b[0m\n\u001b[1;32m    454\u001b[0m         \u001b[0;31m# the initial code book is randomly selected from observations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    455\u001b[0m         \u001b[0mguess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_kpoints\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 456\u001b[0;31m         \u001b[0mbook\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_kmeans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mguess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthresh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mthresh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    457\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdist\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mbest_dist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    458\u001b[0m             \u001b[0mbest_book\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbook\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/ml/lib/python3.5/site-packages/scipy/cluster/vq.py\u001b[0m in \u001b[0;36m_kmeans\u001b[0;34m(obs, guess, thresh)\u001b[0m\n\u001b[1;32m    308\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mdiff\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mthresh\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    309\u001b[0m         \u001b[0;31m# compute membership and distances between obs and code_book\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 310\u001b[0;31m         \u001b[0mobs_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistort\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcode_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_finite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    311\u001b[0m         \u001b[0mprev_avg_dists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistort\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    312\u001b[0m         \u001b[0;31m# recalc code_book as centroids of associated obs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.conda/envs/ml/lib/python3.5/site-packages/scipy/cluster/vq.py\u001b[0m in \u001b[0;36mvq\u001b[0;34m(obs, code_book, check_finite)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missubdtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missubdtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mct\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_vq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc_obs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_code_book\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpy_vq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcode_book\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_finite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "257.48697\n",
+      "500\n"
      ]
     }
    ],
@@ -268,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clf = cv2.ml.KNearest_create()\n",
     "clf.train(X_train, cv2.ml.ROW_SAMPLE, np.asarray(y_train, dtype=np.float32))"
@@ -322,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,9 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1]\n",
+      "[0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8611111111111112"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred_label = []\n",
     "for var in results:\n",
